--- a/client/index.html
+++ b/client/index.html
@@ -121,12 +121,12 @@
                     <div class="form-group">
                         <label for="hours">Hours</label>
                         <input type="number" name="hours" id="hours" class="form-control" placeholder="Hours..."
-                            required maxlength="1">
+                            required min="1">
                     </div>
                     <div class="form-group">
                         <label for="rate">Rate</label>
                         <input type="number" name="rate" id="rate" class="form-control" placeholder="Rate..." required
-                            maxlength="1">
+                            min="1">
                     </div>
                     <div class="form-group">
                         <label for="description">Description</label>
